# ls-fringeapp

./: .gitignore  FringeApp.bat  FringeApp03.py  FringeApp03.pyproj  FringeApp04.pyproj  FringeApp04.sln  LICENSE  README.md  build_install_instructions.txt  example_caldata_xml.py  fringe_app_03.py  fringe_app_03.spec  fringeprocess.py  gauge_length.py  hello.py  load_cal_data.py  load_equipment_data.py  poly_lasso.py  progress_notes.md  pyproject.toml  refractiveindex.py  setup.py
env1/Scripts/: Activate.ps1  activate  activate.bat
env2/Scripts/: Activate.ps1  activate  activate.bat
notebooks/: 00_test_import.ipynb  01_process_old_image.ipynb  02_process_mock_square_image.ipynb  03_circle_mask.ipynb  04_mock_square_mask.ipynb  05_masked_array.ipynb  06_new_code_mask.ipynb  07_test_new_code_mask.ipynb  08_make_mock_images.ipynb  09_affine_transform.ipynb  12_rotate_expand_translate.ipynb  13_rotate_scale_rotate_mock_images.ipynb  14_image_conversion_to_grey_scale.ipynb  15_test_square_hole_ffrac.ipynb  16_offset_mock_images.ipynb  17_synthetic-fringe_images.ipynb  18_levene_test.ipynb  18_synthetic_fringe_images_debug.ipynb  19_synthetic_fringe_square_images.ipynb  20_save_synthetic_fringe_square_images.ipynb  plot_helpers.py
notebooks/archive/: 05_masked_array.ipynb  10_make_mock_images.ipynb
src/fringe/: app.py  fringe_process.py  gauge_length.py  poly_lasso.py  refractive_index.py
tests/: test_calcgaugelength.py  test_file2frac.py  test_load_cal_data.py  test_refractive_index.py  test_square_hole_ffrac.py  test_synthetic_images.py
tests/data/: calcs-LK1.csv  (+6 more)
(+33 files in other folders)
