[project]
name = "ls-fringeapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.7.0",
    "numpy<=1.20",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "line-profiler>=4.2.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]